--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@adobecom/cc",
+  "name": "@adobecom/genuine-milo",
   "private": true,
   "version": "1.0.0",
   "description": "Website foundation technology.",
